[gd_scene load_steps=7 format=3 uid="uid://iybuakcvifjn"]

[ext_resource type="Texture2D" uid="uid://quo4kdxvac7e" path="res://2286300415a9ff54aada9ea75518021e.png" id="1_tvy4u"]
[ext_resource type="Script" path="res://grab_object.gd" id="1_xf1ff"]
[ext_resource type="PackedScene" uid="uid://g1c7c2w34rua" path="res://char.tscn" id="2_3bvit"]

[sub_resource type="BoxShape3D" id="BoxShape3D_lmrmy"]

[sub_resource type="BoxMesh" id="BoxMesh_at5m5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_sqrfp"]
size = Vector3(1.07629, 1.89209, 0.356628)

[node name="Node3D" type="Node3D"]

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(2.94948, 0, 0, 0, 0.0687882, 0, 0, 0, 3.14253, 0, -0.291399, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_lmrmy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D/CollisionShape3D"]
mesh = SubResource("BoxMesh_at5m5")
skeleton = NodePath("../../../frag1/CollisionShape3D")

[node name="frag1" type="Area3D" parent="."]
script = ExtResource("1_xf1ff")

[node name="CollisionShape3D" type="CollisionShape3D" parent="frag1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0674438, 0.446045, -1.03432)
shape = SubResource("BoxShape3D_sqrfp")

[node name="Sprite3D" type="Sprite3D" parent="frag1"]
transform = Transform3D(0.595944, 0, 0, 0, 0.595944, 0, 0, 0, 1, 0, 0.387042, -0.927871)
texture = ExtResource("1_tvy4u")

[node name="char" parent="." instance=ExtResource("2_3bvit")]

[connection signal="mouse_entered" from="frag1" to="frag1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="frag1" to="frag1" method="_on_mouse_exited"]
